force-app/main/default/objects/Contact/fields/Inbound_Reason_Faulty__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Reason_Faulty__c</fullName>
    <description>Explain why inbound lead is faulty</description>
    <label>Inbound Reason Faulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Below minimum number of vehicles/assets</fullName>
            </value>
            <value>
                <fullName>Bogus inquiry - competitor</fullName>
                <isActive>false</isActive>
                <label>Bogus inquiry - competitor</label>
            </value>
            <value>
                <fullName>Bogus inquiry - market research</fullName>
                <isActive>false</isActive>
                <label>Bogus inquiry - market research</label>
            </value>
            <value>
                <fullName>Bogus inquiry - other</fullName>
                <isActive>false</isActive>
                <label>Bogus inquiry - other</label>
            </value>
            <value>
                <fullName>Delete Account</fullName>
            </value>
            <value>
                <fullName>Delete Contact Only</fullName>
            </value>
            <value>
                <fullName>Does not fit criteria - e.g. country,  &lt;7 vehicles, ...</fullName>
                <isActive>false</isActive>
                <label>Does not fit criteria - e.g. country,  &lt;7 vehicles, ...</label>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Duplicate MVF contact in last 6 months</fullName>
                <isActive>false</isActive>
                <label>Duplicate MVF contact in last 6 months</label>
            </value>
            <value>
                <fullName>Inactive - No Longer There</fullName>
            </value>
            <value>
                <fullName>International Lead</fullName>
                <isActive>false</isActive>
                <label>International Lead</label>
            </value>
            <value>
                <fullName>Invalid Contact</fullName>
                <isActive>false</isActive>
                <label>Invalid Contact</label>
            </value>
            <value>
                <fullName>Invalid contact details</fullName>
            </value>
            <value>
                <fullName>Invalid details - name</fullName>
                <isActive>false</isActive>
                <label>Invalid details - name</label>
            </value>
            <value>
                <fullName>Invalid details - phone number</fullName>
                <isActive>false</isActive>
                <label>Invalid details - phone number</label>
            </value>
            <value>
                <fullName>Microfleet</fullName>
                <isActive>false</isActive>
                <label>Microfleet</label>
            </value>
            <value>
                <fullName>Misc/referrals</fullName>
                <isActive>false</isActive>
                <label>Misc/referrals</label>
            </value>
            <value>
                <fullName>--- MVF Faulty Lead Reasons ---</fullName>
                <isActive>false</isActive>
                <label>--- MVF Faulty Lead Reasons ---</label>
            </value>
            <value>
                <fullName>MX No Biz Opp - Fake lead</fullName>
                <isActive>false</isActive>
                <label>MX No Biz Opp - Fake lead</label>
            </value>
            <value>
                <fullName>MX No Biz Opp - Personal tracking</fullName>
                <isActive>false</isActive>
                <label>MX No Biz Opp - Personal tracking</label>
            </value>
            <value>
                <fullName>No Authority</fullName>
            </value>
            <value>
                <fullName>--- Non MVF Faulty Reasons ---</fullName>
                <isActive>false</isActive>
                <label>--- Non MVF Faulty Reasons ---</label>
            </value>
            <value>
                <fullName>No purchase intent (eg test lead)</fullName>
            </value>
            <value>
                <fullName>Not in account owner&apos;s territory</fullName>
            </value>
            <value>
                <fullName>Not in a country Samsara operates</fullName>
            </value>
            <value>
                <fullName>Opt out - Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
                <isActive>false</isActive>
                <label>Test Lead</label>
            </value>
            <value>
                <fullName>Use case not a fit for Samsara products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>