force-app/main/default/objects/Contact/fields/Industrial_Reason_Interest__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Reason_Interest__c</fullName>
    <label>Industrial Reason/Interest</label>
    <type>TextArea</type>
</CustomField>