force-app/main/default/objects/Contact/fields/Is_SalesLoft_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_SalesLoft_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is for admins to force a manual update between Salesforce and SalesLoft contacts.</description>
    <label>Is SalesLoft Contact</label>
    <type>Checkbox</type>
</CustomField>