force-app/main/default/objects/Contact/fields/isUpdated__c.field-meta.xml
<CustomField>
    <fullName>isUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpdated</label>
    <type>Checkbox</type>
</CustomField>