force-app/main/default/objects/Contact/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>Last time contact was called</description>
    <label>Last Call</label>
    <type>DateTime</type>
</CustomField>