force-app/main/default/objects/Contact/fields/Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted__c</fullName>
    <inlineHelpText>Date of last call or non-marketing email send</inlineHelpText>
    <label>Last Contacted</label>
    <type>DateTime</type>
</CustomField>