force-app/main/default/objects/Contact/fields/Last_Marketing_Email_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Email_Open_Date__c</fullName>
    <inlineHelpText>Marketo Field</inlineHelpText>
    <label>Last Marketing Email Open Date</label>
    <type>Date</type>
</CustomField>