force-app/main/default/objects/Contact/fields/Lead_Funnel_RDS_DB_Insert__c.field-meta.xml
<CustomField>
    <fullName>Lead_Funnel_RDS_DB_Insert__c</fullName>
    <inlineHelpText>Used to track TOFU lead insertion metrics</inlineHelpText>
    <label>Lead Funnel RDS DB Insert</label>
    <type>DateTime</type>
</CustomField>