force-app/main/default/objects/Contact/fields/Microsoft_MSCLIKID__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_MSCLIKID__c</fullName>
    <description>Used to track Bing click ads for Growth</description>
    <label>Microsoft MSCLIKID</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>