force-app/main/default/objects/Contact/fields/Mixmax_Hashtag_1__c.field-meta.xml
<CustomField>
    <fullName>Mixmax_Hashtag_1__c</fullName>
    <label>Mixmax Hashtag 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>