force-app/main/default/objects/Contact/fields/mkto71_Exclude_from_Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Exclude_from_Marketo_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Marketo Sync</label>
    <type>Checkbox</type>
</CustomField>