force-app/main/default/objects/Contact/fields/modigie__Modigie__c.field-meta.xml
<CustomField>
    <fullName>modigie__Modigie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modigie</label>
    <referenceTo>modigie__Modigie__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>