force-app/main/default/objects/Contact/fields/New_Inbound_Lead__c.field-meta.xml
<CustomField>
    <fullName>New_Inbound_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Inbound Lead</label>
    <type>Checkbox</type>
</CustomField>