force-app/main/default/objects/Contact/fields/New_Inbound_Lead_Set_dt__c.field-meta.xml
<CustomField>
    <fullName>New_Inbound_Lead_Set_dt__c</fullName>
    <inlineHelpText>New Inbound Lead Set date/time</inlineHelpText>
    <label>New Inbound Lead Set dt</label>
    <type>DateTime</type>
</CustomField>