force-app/main/default/objects/Contact/fields/Next_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Call__c</fullName>
    <label>Next Call</label>
    <type>Date</type>
</CustomField>