force-app/main/default/objects/Contact/fields/Normalized_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone__c</fullName>
    <description>This rule removes extra characters from phone numbers to make them comparable with each other.</description>
    <formula>IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;))=10,

SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;),

IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;))=11,

MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;),2,10),

IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;))&gt;11,

MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;),1,10),

SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;Ext&apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;x&apos;, &apos;&apos;), &apos;,&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Phone</label>
    <type>Text</type>
</CustomField>