force-app/main/default/objects/Contact/fields/Number_of_Active_Wells__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Wells__c</fullName>
    <description>The number of active wells for an Industrial Oil and Gas Company.</description>
    <label>Number of Active Wells</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>