force-app/main/default/objects/Contact/fields/Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assets__c</fullName>
    <formula>Account.Number_of_Unpowered_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Unpowered Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>