force-app/main/default/objects/Contact/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>(Deprecated) Counts the number of calls. Feeds from a trigger, but sometimes fails. Use Number of Calls instead</description>
    <label>(Deprecated) Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>