force-app/main/default/objects/Contact/fields/Number_of_Calls_by_Current_Owner_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls_by_Current_Owner_Roll_Up__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of calls made by the current owner. It feeds from the Rollup Helper.</description>
    <label>Number of Calls by Current Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>