force-app/main/default/objects/Contact/fields/Opt_Out_Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Email_Copy__c</fullName>
    <externalId>true</externalId>
    <label>Opt Out Email Copy</label>
    <type>Email</type>
</CustomField>