force-app/main/default/objects/Contact/fields/Opt_Out_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Phone__c</fullName>
    <externalId>true</externalId>
    <label>Opt Out Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>