force-app/main/default/objects/Contact/fields/Opt_Out_Phone_Copy__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Phone_Copy__c</fullName>
    <label>Opt Out Phone Copy</label>
    <type>Phone</type>
</CustomField>