force-app/main/default/objects/Contact/fields/Opt_Out_Request__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Request__c</fullName>
    <description>Record a contact&apos;s opt out request</description>
    <inlineHelpText>This contact&apos;s requests to opt-out of communication.

If you need to opt this person out of receiving Marketing emails, please check the box below that says &quot;Email - Global Opt Out&quot;</inlineHelpText>
    <label>Opt Out Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Both Phone and Email</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>TPS List</fullName>
            </value>
            <value>
                <fullName>CTPS List</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>