force-app/main/default/objects/Contact/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <formula>TEXT(Account.Organization_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please edit on the Account page.</inlineHelpText>
    <label>Organization Size</label>
    <type>Text</type>
</CustomField>