force-app/main/default/objects/Contact/fields/Original_Owner_for_Recycling_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner_for_Recycling_Campaign__c</fullName>
    <formula>Account.Original_Owner_for_Recycling_Campaign__r.FirstName &amp;&quot; &quot;&amp;Account.Original_Owner_for_Recycling_Campaign__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Owner for Recycling Campaign</label>
    <type>Text</type>
</CustomField>