force-app/main/default/objects/Contact/fields/Owner_is_Pool_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Pool_User__c</fullName>
    <formula>Owner.RR_Is_Pool_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Pool User</label>
    <type>Checkbox</type>
</CustomField>