force-app/main/default/objects/Contact/fields/Owner_Is_Signed_In__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Signed_In__c</fullName>
    <formula>IF(Owner.Signed_In__c, &quot;On&quot;, &quot;Off&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Signed In</label>
    <type>Text</type>
</CustomField>