force-app/main/default/objects/Contact/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Pulls in the owner&apos;s role - for marketing routing purposes.</description>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>