force-app/main/default/objects/Contact/fields/Ownership_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Flag__c</fullName>
    <formula>IF( AND(Account.Owner.Id&lt;&gt;OwnerId, OwnerId=&apos;0051a000002W9In&apos;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Flag</label>
    <type>Checkbox</type>
</CustomField>