force-app/main/default/objects/Contact/fields/Phone_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record requests to opt out of phone calls</description>
    <inlineHelpText>Not related to Salesloft &quot;Can Not Loft&quot; notice</inlineHelpText>
    <label>Phone Opt Out</label>
    <type>Checkbox</type>
</CustomField>