force-app/main/default/objects/Contact/fields/Preferences_Text_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Text_Stamped__c</fullName>
    <label>Preferences Text Stamped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>