force-app/main/default/objects/Contact/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Value Strategist</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Engagement Services Manager</fullName>
            </value>
            <value>
                <fullName>Implementation- Canada</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant- New Hire / Extended Leave</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant - Plus IC</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant- Ramping IC/SIE</fullName>
            </value>
            <value>
                <fullName>Implementation- Core</fullName>
            </value>
            <value>
                <fullName>Implementation- PubSec</fullName>
            </value>
            <value>
                <fullName>Implementation- Select</fullName>
            </value>
            <value>
                <fullName>Implementation- Strategic</fullName>
            </value>
            <value>
                <fullName>Solutions Architect (TSE)</fullName>
                <label>Integrations Architect (SIE)</label>
            </value>
            <value>
                <fullName>Solutions Developer (TSE)</fullName>
                <label>Integrations Developer (SIE)</label>
            </value>
            <value>
                <fullName>People Managers</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA Lead</fullName>
            </value>
            <value>
                <fullName>Resident Consultant</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Trial Success Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>