force-app/main/default/objects/Contact/fields/pse__Utilization__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization__c</fullName>
    <description>[DEPRECATED, no longer used]</description>
    <formula>IF((pse__Utilization_Elapsed_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Utilization_Elapsed_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Utilization_Elapsed_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>