force-app/main/default/objects/Contact/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <description>Saves the date the contact was qualified and an opportunity was created</description>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>