force-app/main/default/objects/Contact/fields/Record_Type_Stamp_for_Dupes__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Stamp_for_Dupes__c</fullName>
    <description>Stamped by trigger and cloudingo.</description>
    <label>Record Type Stamp for Dupes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>