force-app/main/default/objects/Contact/fields/Referral_Unpaid_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Unpaid_Source__c</fullName>
    <formula>OR(
 ISPICKVAL(Source__c, &apos;Referral (Unpaid)&apos;),
 ISPICKVAL(LeadSource, &apos;Referral (Unpaid)&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral (Unpaid) Source</label>
    <type>Checkbox</type>
</CustomField>