force-app/main/default/objects/Contact/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the contact was referred by another customer / prospect, note it here. (Do not use for partner referrals)</description>
    <label>Referred By</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Referred By field must be set to end-customer accounts (do not use for resellers)</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>End Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Referred By)</relationshipLabel>
    <relationshipName>Customer_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>