force-app/main/default/objects/Contact/fields/Referring_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Referring_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Referring Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>