force-app/main/default/objects/Contact/fields/Registered_on_TPS__c.field-meta.xml
<CustomField>
    <fullName>Registered_on_TPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered on TPS</label>
    <type>Checkbox</type>
</CustomField>