force-app/main/default/objects/Contact/fields/Scheduled_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Demo_Date__c</fullName>
    <description>Used for AEs and ADRs to set upcoming demo dates. Setting the value of this field will automatically move the contact status to Demo Scheduled</description>
    <label>Scheduled Demo Date</label>
    <type>DateTime</type>
</CustomField>