force-app/main/default/objects/Contact/fields/Second_Followup_Subject__c.field-meta.xml
<CustomField>
    <fullName>Second_Followup_Subject__c</fullName>
    <label>Second Followup Subject</label>
    <type>TextArea</type>
</CustomField>