force-app/main/default/objects/Contact/fields/send_Csat_email__c.field-meta.xml
<CustomField>
    <fullName>send_Csat_email__c</fullName>
    <formula>Mod (Cases_closed__c, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>send Csat email</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>