force-app/main/default/objects/Contact/fields/sgenads__c.field-meta.xml
<CustomField>
    <fullName>sgenads__c</fullName>
    <label>sgenads</label>
    <length>200</length>
    <type>Text</type>
</CustomField>