force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;Other&apos;</defaultValue>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a16z EBC</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>BuyerZone</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Deal Reg Form</fullName>
            </value>
            <value>
                <fullName>Deal Reg Form - Industrial</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Facebook Form</fullName>
            </value>
            <value>
                <fullName>Free Trial Request Form</fullName>
            </value>
            <value>
                <fullName>Inbound call / email</fullName>
            </value>
            <value>
                <fullName>LinkedIn Form</fullName>
            </value>
            <value>
                <fullName>List Import (no prior engagement)</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>MVF</fullName>
            </value>
            <value>
                <fullName>ReadyQuote</fullName>
            </value>
            <value>
                <fullName>Outbound call / email / linkedin</fullName>
            </value>
            <value>
                <fullName>Partner referral</fullName>
            </value>
            <value>
                <fullName>Referral (Unpaid)</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Webinar Registration Form</fullName>
            </value>
            <value>
                <fullName>Website form</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Application Form</fullName>
            </value>
            <value>
                <fullName>Adwords (Industrial)</fullName>
            </value>
            <value>
                <fullName>Website Visitor</fullName>
            </value>
            <value>
                <fullName>Software Advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>